# nexustack

./: .rustfmt.toml  Cargo.toml  LICENSE  README.md  TODO.md  clippy.toml
.github/workflows/: fmt.yml  lint.yml  (+3 more)
crates/nexustack/: CHANGELOG.md  Cargo.toml  README.md
crates/nexustack/src/: MODULE.md  callsite.rs  lib.rs  private.rs
crates/nexustack/src/application/: chain.rs  configurable.rs  either.rs  empty.rs  instrumentation.rs  mod.rs  node.rs
crates/nexustack/src/cron/: README.md  clock.rs  error.rs  feature.rs  mod.rs
crates/nexustack/src/http/: README.md  application_part.rs  controller.rs  decoding.rs  encoding.rs  endpoint.rs  feature.rs  mod.rs  response.rs  yaml.rs
crates/nexustack/src/http/swagger/: mod.rs
crates/nexustack/src/inject/: README.md  injectable.rs  injection_error.rs  injector.rs  mod.rs  service_collection.rs  service_provider.rs  service_scope.rs  service_token.rs
crates/nexustack/src/inject/container/: container_builder.rs  container_entry.rs  container_entry_builder.rs  mod.rs
crates/nexustack/src/openapi/: README.md  either.rs  error.rs  example.rs  http.rs  impossible.rs  mod.rs  nop.rs  post_process.rs  schema.rs  schema_builder.rs  version.rs
crates/nexustack/src/openapi/http/: content_type.rs  generator.rs  mod.rs  operation.rs  response.rs
crates/nexustack/src/openapi/impls/: array.rs  chrono.rs  deref.rs  ffi.rs  map.rs  mod.rs  net.rs  primitives.rs  seq.rs  sync.rs  time.rs  tuple.rs  url.rs
crates/nexustack/src/openapi/json/: error.rs  http.rs  mod.rs  schema.rs  schema_collection.rs
crates/nexustack/src/openapi/private/: flat_map_schema_builder.rs  mod.rs
crates/nexustack/src/openapi/schema/: builder.rs  either.rs  example.rs  impossible.rs  mod.rs  nop.rs  optional.rs  post_process.rs
crates/nexustack/src/openapi/spec/: callback_object.rs  components_object.rs  contact_object.rs  discriminator_object.rs  encoding_object.rs  example_object.rs  external_documentation_object.rs  header_object.rs  info_object.rs  link_object.rs  media_type_object.rs  mod.rs  oauth_flows_object.rs  open_api_object.rs  parameter_location.rs  parameter_object.rs  parameter_style.rs  paths_object.rs  reference_object.rs  request_body_object.rs  response_object.rs  schema_object.rs  security_scheme_type.rs  tag_object.rs
crates/nexustack/src/utils/: atomic_once_cell.rs  mod.rs  optional.rs
crates/nexustack/tests/: tests.rs
crates/nexustack/tests/openapi/: mod.rs
crates/nexustack/tests/openapi/enum_adjacently_tagged/: enum_adjacently_tagged_basic.rs  enum_adjacently_tagged_deprecated.rs  enum_adjacently_tagged_deprecated_field.rs  enum_adjacently_tagged_deprecated_variant.rs  enum_adjacently_tagged_generic.rs  enum_adjacently_tagged_non_exhaustive.rs  enum_adjacently_tagged_other.rs  enum_adjacently_tagged_rename.rs  enum_adjacently_tagged_rename_field.rs  enum_adjacently_tagged_rename_variant.rs  enum_adjacently_tagged_skip_serializing_if.rs  enum_adjacently_tagged_skip_variant.rs  mod.rs
crates/nexustack/tests/openapi/enum_externally_tagged/: enum_externally_tagged_basic.rs  enum_externally_tagged_deprecated.rs  enum_externally_tagged_deprecated_field.rs  enum_externally_tagged_deprecated_variant.rs  enum_externally_tagged_generic.rs  enum_externally_tagged_non_exhaustive.rs  enum_externally_tagged_rename.rs  enum_externally_tagged_rename_field.rs  enum_externally_tagged_rename_variant.rs  enum_externally_tagged_skip_serializing_if.rs  enum_externally_tagged_skip_variant.rs  mod.rs
crates/nexustack/tests/openapi/enum_internally_tagged/: enum_internally_tagged_basic.rs  enum_internally_tagged_deprecated.rs  enum_internally_tagged_deprecated_field.rs  enum_internally_tagged_deprecated_variant.rs  enum_internally_tagged_generic.rs  enum_internally_tagged_non_exhaustive.rs  enum_internally_tagged_other.rs  enum_internally_tagged_rename.rs  enum_internally_tagged_rename_field.rs  enum_internally_tagged_rename_variant.rs  enum_internally_tagged_skip_serializing_if.rs  enum_internally_tagged_skip_variant.rs  mod.rs
crates/nexustack_inject/: Cargo.toml  README.md
crates/nexustack_inject/src/: injectable.rs  injection_error.rs  injector.rs  lib.rs  service_collection.rs  service_provider.rs  service_scope.rs  service_token.rs
crates/nexustack_inject/src/container/: container_builder.rs  container_entry.rs  container_entry_builder.rs  mod.rs
crates/nexustack_inject/src/utils/: atomic_once_cell.rs  mod.rs
crates/nexustack_inject_macros/: Cargo.toml
crates/nexustack_inject_macros/src/: lib.rs
crates/nexustack_inject_macros_impl/: Cargo.toml
crates/nexustack_inject_macros_impl/src/: dummy.rs  expand.rs  lib.rs
crates/nexustack_inject_macros_impl/src/internals/: ctxt.rs  mod.rs
crates/nexustack_inject_macros_impl/tests/: basic.rs  injectable_ctor.rs  no_deps.rs  struct.rs  tests.rs  tuple_struct.rs  unit_struct.rs
crates/nexustack_macros/: CHANGELOG.md  Cargo.toml  README.md
crates/nexustack_macros/src/: lib.rs
crates/nexustack_macros/src/cron/: CRON.md  mod.rs
crates/nexustack_macros/src/http/: mod.rs
crates/nexustack_macros/src/inject/: expand.rs  mod.rs
crates/nexustack_macros/src/internals/: attr.rs  callsite.rs  case.rs  ctxt.rs  default.rs  mod.rs  name.rs  receiver.rs  respan.rs  symbol.rs
crates/nexustack_macros/src/module/: MODULE.md  expand.rs  mod.rs
crates/nexustack_macros/src/openapi/: bound.rs  serde.rs
crates/nexustack_macros_impl/: Cargo.toml
crates/nexustack_macros_impl/src/: dummy.rs  fragment.rs  lib.rs
crates/nexustack_macros_impl/src/inject/: expand.rs
crates/nexustack_macros_impl/src/internals/: attr.rs  ctxt.rs  mod.rs  symbol.rs
crates/nexustack_macros_impl/src/openapi/: dummy.rs  generics.rs  mod.rs
crates/nexustack_macros_impl/tests/: tests.rs
crates/nexustack_macros_impl/tests/inject/: basic.rs  injectable_ctor.rs  mod.rs  no_deps.rs  struct.rs  tuple_struct.rs  unit_struct.rs
samples/nexustack_sample/: Cargo.toml
samples/nexustack_sample/src/: client_info.rs  main.rs  response.rs
samples/nexustack_sample/src/notes/: create.rs  get.rs  mod.rs  note.rs
(+137 files in other folders)
