[workspace]
resolver = "2"
members = [
    "crates/nexustack",
    "crates/nexustack_macros",
    "crates/nexustack_macros_impl"
]

[workspace.package]
rust-version="1.88.0"
version = "0.1.0"
authors = ["Cato Truetschel and contributors"]
description = "A rust web framework inspired by nestjs and asp.net"
repository = "https://github.com/1ean267/nexustack"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0.100"
axum = "0.8.6"
const_format = "0.2.34"
either = "1.15.0"
futures-util = "0.3.31"
nexustack_macros = { path = "crates/nexustack_macros" }
nexustack_macros_impl = { path = "crates/nexustack_macros_impl" }
pretty_assertions = "1.4.1"
proc-macro2 = "1.0.101"
quote = "1.0.40"
rust-format = "0.3.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
syn = "2.0.100"
thiserror = "2.0.12"
tokio = "1.47.1"
tokio-util = "0.7.16"
tracing = "0.1.41"
