[workspace]
resolver = "2"
members = [
    "crates/nexustack",
    "crates/nexustack_macros",
    "samples/nexustack_sample"
]

[workspace.package]
rust-version="1.91.1"
version = "0.1.1"
authors = ["Cato Truetschel and contributors"]
description = "A rust web framework inspired by nestjs and asp.net"
repository = "https://github.com/1ean267/nexustack"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
const_format = "0.2.34"
cron = "0.15.0"
either = "1.15.0"
futures-util = "0.3.31"
nexustack = { path = "crates/nexustack" }
nexustack_macros = { path = "crates/nexustack_macros", version = "0.1.1" }
pretty_assertions = "1.4.1"
proc-macro2 = "1.0.101"
quote = "1.0.40"
rust-format = "0.3.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
syn = "2.0.100"
thiserror = "2.0.12"
tokio = "1.47.1"
tokio-util = "0.7.16"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
url = "2.5.7"
uuid = "1.18.1"