[workspace]
resolver = "3"
members = [
    "crates/nexustack",
    "crates/nexustack_macros",
    "samples/nexustack_sample"
]

[workspace.package]
rust-version="1.91.1"
version = "0.2.0"
authors = ["Cato Truetschel and contributors"]
description = "Nexustack is a modular Rust framework combining HTTP, WebSockets, MQTT, AMQP, and cron jobs with a unified DI system, enabling scalable, enterprise-ready applications with out-of-the-box API documentation."
repository = "https://github.com/1ean267/nexustack"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0.100"
axum = "0.8.7"
axum-client-ip = "1.1.3"
axum-extra = "0.12.2"
bytes = "1.11.0"
chrono = "0.4.42"
const_format = "0.2.34"
cron = "0.15.0"
docstrings = "0.1.1"
either = "1.15.0"
futures-util = "0.3.31"
include_directory = "0.1.1"
mime = "0.3.17"
mime_guess = "2.0.5"
nexustack = { path = "crates/nexustack" }
nexustack_macros = { path = "crates/nexustack_macros", version = "0.2.0" }
nonempty-collections = "1.2.1"
pretty_assertions = "1.4.1"
proc-macro2 = "1.0.101"
quote = "1.0.40"
regex = "1.12.2"
rust-format = "0.3.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
serde_path_to_error = "0.1.20"
serde_yaml_bw = "2.5.1"
syn = "2.0.100"
thiserror = "2.0.12"
tokio = "1.47.1"
tokio-util = "0.7.16"
tower-service = "0.3.3"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
url = "2.5.7"
uuid = "1.18.1"
