[package]
name = "nexustack"
edition = "2024"
readme = "README.md"
keywords = ["nexustack", "inject", "dependency-injection", "DI", "inversion of control", "IOC", "container"]
categories = ["web-programming"]
rust-version.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true

[features]
default = ["derive", "openapi", "uuid", "url"]
derive = []
unsize = []
openapi = ["serde", "serde_json", "either", "const_format"]
chrono = ["dep:chrono"]
uuid = ["dep:uuid"]
url = ["dep:url"]

[lints.rust]
missing_docs = "warn"

[lints.clippy]
pedantic = "warn"
nursery = "warn"
cargo = "warn"
style = "warn"
perf = "warn"
complexity = "warn"
suspicious = "warn"
correctness = "warn"
redundant_pub_crate = { level = "allow", priority = 1 }
large_stack_frames = { level = "warn", priority = 1 }
large_types_passed_by_value = { level = "warn", priority = 1 }

[lints.rustdoc]
missing_crate_level_docs = "warn"
unescaped_backticks = "warn"

[dependencies]
anyhow = { workspace = true }
const_format = { workspace = true, optional = true }
either = { workspace = true, optional = true, features = ["serde"] }
futures-util = { workspace = true }
nexustack_macros = { workspace = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "signal", "time"] }
tokio-util = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }
url = { workspace = true, optional = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
