[package]
name = "nexustack"
edition = "2024"
readme = "README.md"
keywords = ["nexustack", "http", "websocket", "dependency-injection", "modular"]
categories = ["web-programming"]
rust-version.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["derive", "nexustack_macros/inject", "nexustack_macros/module"]
derive = []
openapi = [
    "dep:serde",
    "dep:serde_json",
    "dep:const_format",
    "dep:include_directory",
    "dep:mime_guess",
    "nexustack_macros/openapi",
]
chrono = ["dep:chrono"]
uuid = ["dep:uuid"]
url = ["dep:url"]
cron = ["dep:cron", "dep:chrono", "nexustack_macros/cron"]
http = [
    "dep:axum-extra",
    "dep:axum",
    "dep:bytes",
    "dep:mime",
    "dep:nonempty-collections",
    "dep:serde",
    "dep:tower-service",
    "nexustack_macros/http",
]
yaml = ["dep:serde_path_to_error", "dep:serde_yaml_bw", "axum/__private"]
axum-client-ip = [ "dep:axum-client-ip", "nexustack_macros/axum-client-ip", ]

[lints.rust]
missing_docs = "warn"

[lints.clippy]
pedantic = "warn"
nursery = "warn"
cargo = "warn"
style = "warn"
perf = "warn"
complexity = "warn"
suspicious = "warn"
correctness = "warn"
redundant_pub_crate = { level = "allow", priority = 1 }
large_stack_frames = { level = "warn", priority = 1 }
large_types_passed_by_value = { level = "warn", priority = 1 }

[lints.rustdoc]
missing_crate_level_docs = "warn"
unescaped_backticks = "warn"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true, optional = true, features = ["tokio"] }
axum-client-ip = { workspace = true, optional = true }
axum-extra = { workspace = true, optional = true, features = ["query"] }
bytes = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }
const_format = { workspace = true, optional = true }
cron = { workspace = true, optional = true, features = ["serde"] }
either = { workspace = true, features = ["serde"] }
futures-util = { workspace = true }
include_directory = { workspace = true, optional = true }
mime = { workspace = true, optional = true }
mime_guess = { workspace = true, optional = true  }
nexustack_macros = { workspace = true }
nonempty-collections = { workspace = true, optional = true }
serde = { workspace = true, optional = true, features = ["rc"] }
serde_json = { workspace = true, optional = true }
serde_path_to_error = { workspace = true, optional = true }
serde_yaml_bw = { workspace = true, optional = true  }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "signal", "time"] }
tokio-util = { workspace = true }
tower-service = { workspace = true, optional = true }
tracing = { workspace = true }
url = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
