[package]
name = "nexustack_inject"
edition = "2024"
rust-version.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true

[features]
default = ["derive"]
derive = []
unsize = []

[dependencies]

nexustack_inject_macros = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
