[package]
name = "nexustack_inject_macros"
edition = "2024"
rust-version.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
nexustack_inject_macros_impl = { workspace = true }

[dev-dependencies]
