[package]
name = "nexustack_inject_macros_impl"
edition = "2024"
readme = "README.md"
keywords = ["nexustack", "inject", "dependency-injection", "DI", "inversion of control", "IOC", "container"]
categories = ["web-programming"]
rust-version.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["full", "extra-traits", "visit"] }


[dev-dependencies]
rust-format = { workspace = true, features = ["token_stream"] }
