[package]
name = "nexustack_macros"
edition = "2024"
readme = "README.md"
keywords = ["nexustack", "inject", "dependency-injection", "DI", "inversion of control", "IOC", "container"]
categories = ["web-programming"]
rust-version.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
nexustack_macros_impl = { workspace = true }

[dev-dependencies]
