[package]
name = "nexustack_macros_impl"
edition = "2024"
readme = "README.md"
keywords = ["nexustack", "inject", "dependency-injection", "DI", "inversion of control", "IOC", "container"]
categories = ["web-programming"]
rust-version.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true

[features]
default = ["openapi", "inject", "cron"]
openapi = []
inject = []
cron = ["dep:cron"]

[dependencies]
cron = { workspace = true, optional = true }
proc-macro2 = { workspace = true, features = ["span-locations"]}
quote = { workspace = true }
syn = { workspace = true, features = ["full", "extra-traits", "visit", "visit-mut"] }

[dev-dependencies]
rust-format = { workspace = true, features = ["token_stream"] }
pretty_assertions = { workspace = true }
