[package]
name = "nexustack_sample"
edition = "2024"
publish = false
rust-version.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true

[lints.clippy]
pedantic = "warn"
nursery = "warn"
cargo = "warn"
style = "warn"
perf = "warn"
complexity = "warn"
suspicious = "warn"
correctness = "warn"
redundant_pub_crate = { level = "allow", priority = 1 }
large_stack_frames = { level = "warn", priority = 1 }
large_types_passed_by_value = { level = "warn", priority = 1 }
cargo_common_metadata = { level = "allow", priority = 1 }

[lints.rustdoc]
missing_crate_level_docs = "warn"
unescaped_backticks = "warn"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
nexustack = { workspace = true, features = ["cron"] }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }